TEST_PROGRAMS/VALID/mathieu_boucher/valid2.min
#all constructs

var x : int;
var y : string;
var z : float;

if x then
	y = y + 1;
endif

if y then
	z = z - x;
else
	z = z * x;
endif

while z do
	x = z + 1;
done

print x;
read y;


