TEST_PROGRAMS/INVALID/Fan_Jin/multiple-declaration.min
var x: int;
var y: float;
var u, v: string;

u = "";
v = "many";
u = u + v;

x = 1;

while x do
  print u;
  if (y + 3) then
    print v;
  endif
done
